WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208166
Regression(CookieCache) Hang and very high CPU usage on nytimes.com
https://bugs.webkit.org/show_bug.cgi?id=208166
Summary
Regression(CookieCache) Hang and very high CPU usage on nytimes.com
Chris Dumez
Reported
2020-02-24 16:19:12 PST
Enabling the In-Process cookie cache causes a hang and very high CPU usage on nytimes.com.
Attachments
Patch
(6.71 KB, patch)
2020-02-24 16:23 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(8.59 KB, patch)
2020-02-24 16:48 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(9.15 KB, patch)
2020-02-24 16:58 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(9.90 KB, patch)
2020-02-24 17:00 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(12.50 KB, patch)
2020-02-24 17:03 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(13.32 KB, patch)
2020-02-24 17:07 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(13.70 KB, patch)
2020-02-24 17:10 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-02-24 16:19:27 PST
<
rdar://problem/59739735
>
Chris Dumez
Comment 2
2020-02-24 16:23:03 PST
Created
attachment 391595
[details]
Patch
Chris Dumez
Comment 3
2020-02-24 16:48:40 PST
Created
attachment 391603
[details]
Patch
Chris Dumez
Comment 4
2020-02-24 16:58:35 PST
Created
attachment 391608
[details]
Patch
Chris Dumez
Comment 5
2020-02-24 17:00:21 PST
Created
attachment 391609
[details]
Patch
Chris Dumez
Comment 6
2020-02-24 17:03:38 PST
Created
attachment 391610
[details]
Patch
Chris Dumez
Comment 7
2020-02-24 17:07:47 PST
Created
attachment 391611
[details]
Patch
Chris Dumez
Comment 8
2020-02-24 17:10:05 PST
Created
attachment 391612
[details]
Patch
Chris Dumez
Comment 9
2020-02-25 08:16:41 PST
Comment on
attachment 391612
[details]
Patch Clearing flags on attachment: 391612 Committed
r257354
: <
https://trac.webkit.org/changeset/257354
>
Chris Dumez
Comment 10
2020-02-25 08:16:43 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug