Regression(CookieCache) Hang and very high CPU usage on nytimes.com https://bugs.webkit.org/show_bug.cgi?id=208166 <rdar://problem/59739735>

Reviewed by Alex Christensen.

Source/WebCore:

The Cookie class which the cookie cache implementation relies on for IPC of cookie had a bug
in its implementation to convert the Cookie into a NSHTTPCookie. In particular, if the expiry
was in the past, it would drop it and the cookie would end up with no expiration date. We would
end up with a cookie that lives for duration of the session, instead of a cookie with an
expiration in the past (which is how sites delete cookies).

Test: http/tests/cookies/document-cookie-set-expired-cookie.html

* platform/network/cocoa/CookieCocoa.mm:
(WebCore::Cookie::operator NSHTTPCookie * _Nullable  const):

Source/WebKit:

Re-enable the in-process cookie cache now that the bug on nytimes.com has been fixed.

* Shared/WebPreferences.yaml:

LayoutTests:

Add layout test coverage.

* http/tests/cookies/document-cookie-set-expired-cookie-expected.txt: Added.
* http/tests/cookies/document-cookie-set-expired-cookie.html: Added.

Canonical link: https://commits.webkit.org/221127@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257354 268f45cc-cd09-0410-ab3c-d52691b4dbfc